# prtools

./: .gitignore  AGENTS.md  PRD.md  README.en.md  README.md  pyproject.toml  pysidedeploy.spec
.github/workflows/: ci.yml
docs/: TECHNICAL.en.md  TECHNICAL.md
src/prtools/: __init__.py  __main__.py  app.py  cursor_watchdog.py  icon.py  keyboard.py  keys.py  mac_keyboard.py  overlays.py  platform.py  settings.py  spotlight.py  tray.py  windows_cursor.py
tests/: test_app.py  test_keys.py  test_settings.py  test_ui.py  test_windows_cursor.py
