[project]
name = "prtools"
version = "0.0.1"
description = "A cross-platform system-tray presentation toolkit"
readme = "README.md"
authors = [
    { name = "meebox", email = "meebox@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pynput>=1.8.2",
    "pyobjc-framework-cocoa>=12.2.1 ; sys_platform == 'darwin'",
    "pyside6>=6.11.1",
    "python-xlib>=0.33 ; sys_platform == 'linux'",
]

[project.scripts]
prtools = "prtools.app:main"
prtools-cursor-watchdog = "prtools.cursor_watchdog:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.21",
]
